--- a/src/NoteListMain/NoteListMain.css
+++ b/src/NoteListMain/NoteListMain.css
@@ -14,6 +14,6 @@
   margin: 0 auto 20px;
 }
 .NoteListMain__add-note-button:hover {
-  background-color: #29862e;
+  background-color:  #FFB72F;
   color: white;
 }
