--- a/src/NoteListNav/NoteListNav.css
+++ b/src/NoteListNav/NoteListNav.css
@@ -14,13 +14,13 @@
   margin: 20px auto;
 }
 .NoteListNav__add-folder-button:hover {
-  background-color: #29862e;
+  background-color: #FFB72F;
   color: white;
 }
 
 .NoteListNav__folder-link {
-  background-color: #030f1f;
-  color: #b5b3b3;
+  background-color: white;
+  color:dark rgb(66, 66, 66);
   display: block;
   font-family: var(--custom-font);
   font-size: 20px;
@@ -34,7 +34,7 @@
   cursor: pointer;
 }
 .NoteListNav__folder-link.active {
-  background-color: #102541;
+  background-color:rgb(66, 66, 66);;
 }
 
 .NoteListNav__num-notes {
