upload for help with invalid time value

--- a/src/NoteListMain/NoteListMain.css
+++ b/src/NoteListMain/NoteListMain.css
@@ -7,7 +7,8 @@
 
 .NoteListMain__button-container {
   max-width: 380px;
-  margin: 0 10px;
+  margin: 0 30px;
+  display: inline-block;
 }
 
 .NoteListMain__add-note-button {
