--- a/src/NoteListMain/NoteListMain.css
+++ b/src/NoteListMain/NoteListMain.css
@@ -7,14 +7,13 @@
 
 .NoteListMain__button-container {
   max-width: 380px;
-  margin: 0 30px;
-  display: inline-block;
+  margin: 0 10px;
 }
 
 .NoteListMain__add-note-button {
   margin: 0 auto 20px;
 }
 .NoteListMain__add-note-button:hover {
-  background-color:  #FFB72F;
+  background-color: #29862e;
   color: white;
 }
